...
    }
    
    func getTransactions(
        for userId: String,
        type: PaymentType? = nil,
        status: PaymentStatus? = nil,
        from: Date? = nil,
        to: Date? = nil
    ) throws -> [PaymentTransaction] {
        var predicate = #Predicate<PaymentTransaction> { transaction in
            transaction.sourceId == userId || transaction.destinationId == userId
        }
        
...
